--- a/src/components/NavBar/index.module.scss
+++ b/src/components/NavBar/index.module.scss
@@ -1,8 +1,15 @@
-.header{
-    background-color: #1db954; /* Spotify green */
+@import '../../styles/helpers/variables';
+
+.navbar{
+    background-color: $black; /* Spotify green */
     color: #fff;
-    padding: 20px;
+    padding: 25px 75px 25px 25px;
     display: grid;
     grid-template-columns: auto 5fr; /* Left-aligned navbar and flexible main content */
-    align-items: center;
+    height: 100vh;
+    border-radius: 10px;
+    margin-right: 20px;
+    nav ul{
+        margin-top: 30px;
+    }
 }
