--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -1,5 +1,7 @@
 .main {
     display: grid;
     grid-template-columns: auto 1fr; /* Repeat this line for a consistent layout with the header */
+    background-color: black;
+    padding: 7.5px;
 }
 
