--- a/src/components/NavbarItem/index.module.scss
+++ b/src/components/NavbarItem/index.module.scss
@@ -9,6 +9,7 @@
     gap: 15px;
     align-items: center;
     font-size: 20px;
+    text-decoration: inherit;
     &:hover{
         cursor: pointer;
         color: white;
