--- a/src/components/NavBar/index.module.scss
+++ b/src/components/NavBar/index.module.scss
@@ -6,7 +6,8 @@
     padding: 25px 75px 25px 25px;
     display: grid;
     grid-template-columns: auto 5fr; /* Left-aligned navbar and flexible main content */
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     border-radius: 10px;
     margin-right: 20px;
     nav ul{
