--- a/src/styles/helpers/reset.scss
+++ b/src/styles/helpers/reset.scss
@@ -86,6 +86,8 @@ video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    text-decoration: inherit;
+    color: inherit;
 }
 
 
