--- a/src/components/NavBar/index.module.scss
+++ b/src/components/NavBar/index.module.scss
@@ -4,13 +4,11 @@
     background-color: $black; /* Spotify green */
     color: #fff;
     padding: 25px 75px 25px 25px;
-    display: grid;
-    grid-template-columns: auto 5fr; /* Left-aligned navbar and flexible main content */
     height: 100%;
     min-height: 100vh;
     border-radius: 10px;
     margin-right: 20px;
-    nav ul{
+    ul{
         margin-top: 30px;
     }
 }
