--- a/src/pages/search/index.module.scss
+++ b/src/pages/search/index.module.scss
@@ -9,14 +9,20 @@
     animation: spin 1s ease infinite;
 }
 
-.search {
+.search{
     display: block;
     width: 100%;
 
     &_results{
         width: 100%;
         margin-top: 50px;
-        display: grid;
         gap: 50px;
+
+        &_grid{
+            display: grid;
+            grid-template-columns: repeat(9, 1fr); 
+            gap: 20px;
+            margin: 1rem 0;
+        }
     }
 }
