--- a/src/components/PageTitle/index.module.scss
+++ b/src/components/PageTitle/index.module.scss
@@ -1,6 +1,7 @@
-@import '../../styles/helpers/variables';
+@import "../../styles/helpers/variables";
 
-.title{
+.title {
     font-size: 32px;
     color: $black;
+    margin-bottom: 8%;
 }
