--- a/src/pages/audio/add/index.module.scss
+++ b/src/pages/audio/add/index.module.scss
@@ -1,13 +1,13 @@
-@import '../../../styles/helpers/variables';
+@import "../../../styles/helpers/variables";
 
-.form{
-    &_container{
+.form {
+    &_container {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
 
-    &_fields{
+    &_fields {
         width: 70%;
     }
 
@@ -17,7 +17,7 @@
         overflow: hidden;
         border: 1px solid black;
         border-radius: 4px;
-        .form_group{
+        .form_group {
             position: relative;
             height: 100%;
         }
