--- a/src/pages/album/update/[id]/index.module.scss
+++ b/src/pages/album/update/[id]/index.module.scss
@@ -19,4 +19,10 @@
 
         .description {}
     }
+
+    .actions {
+        margin: 20px 0;
+        display: flex;
+        gap: 20px;
+    }
 }
