--- a/src/components/NavBar/index.module.scss
+++ b/src/components/NavBar/index.module.scss
@@ -1,14 +1,14 @@
 @import '../../styles/helpers/variables';
 
-.navbar{
-    background-color: $black; /* Spotify green */
+.navbar {
+    background-color: $black;
     color: #fff;
-    padding: 25px 75px 25px 25px;
+    padding: 25px 75px 0px 25px;
     height: 100%;
-    min-height: 100vh;
     border-radius: 10px;
     margin-right: 20px;
-    ul{
+
+    ul {
         margin-top: 30px;
     }
 }
