--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -1,35 +1,44 @@
 @import "../helpers/variables.scss";
 
+html,
+body,
+#__next {
+    height: 100%;
+}
+
 .main {
     display: grid;
-    grid-template-columns: auto 1fr; /* Repeat this line for a consistent layout with the header */
+    grid-template-columns: auto 1fr;
     padding: 7.5px;
+    height: 100%;
 }
 
-main{
-    padding: 25px 200px 25px 25px;
+main {
+    padding: 25px;
 }
 
-.slick{
-    
-    &-track{
+.slick {
+
+    &-track {
         margin-left: 0 !important;
         display: flex !important;
         gap: 10px;
     }
 
-    &-next{
+    &-next {
         right: 0 !important;
         z-index: 9;
-        &::before{
+
+        &::before {
             font-size: 30px !important;
         }
     }
 
-    &-prev{
+    &-prev {
         left: 0 !important;
         z-index: 9;
-        &::before{
+
+        &::before {
             font-size: 30px !important;
         }
     }
