--- a/src/components/Pagination/index.module.scss
+++ b/src/components/Pagination/index.module.scss
@@ -1,4 +1,5 @@
 // index.module.scss
+@import "../../styles/helpers/variables.scss";
 
 .pagination {
   display: flex;
@@ -18,13 +19,13 @@
         display: block;
         padding: 8px;
         text-decoration: none;
-        color: #333;
         border: 1px solid #ddd;
         border-radius: 4px;
         transition: background-color 0.3s;
 
         &:hover {
           background-color: #f4f4f4;
+          color: black !important;
         }
 
         &:focus {
@@ -34,7 +35,7 @@
       }
 
       span {
-        background-color: #007bff;
+        background-color: $primary-color;
         color: #fff;
       }
     }
