--- a/src/pages/audio/add/index.module.scss
+++ b/src/pages/audio/add/index.module.scss
@@ -1,6 +1,7 @@
 @import "../../../styles/helpers/variables";
 
 .form {
+    padding: 25px;
     &_container {
         display: flex;
         justify-content: space-between;
