--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -25,3 +25,13 @@
   height: 50px;
   animation: spin 1s linear infinite;
 }
+
+.p-datatable {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  tr {
+    padding: 19px !important;
+  }
+}
