--- a/src/components/AlbumBanner/index.module.scss
+++ b/src/components/AlbumBanner/index.module.scss
@@ -1,9 +1,11 @@
+@import "../../styles/helpers/variables.scss";
+
 .banner {
   display: flex;
   gap: 50px;
   padding: 100px 20px 20px;
   align-items: flex-end;
-  background-color: #748ba2;
+  background-color: transparent;
   color: white;
   border-radius: 10px;
 
