--- a/src/components/NavBar/index.module.scss
+++ b/src/components/NavBar/index.module.scss
@@ -1,7 +1,7 @@
-@import '../../styles/helpers/variables';
+@import "../../styles/helpers/variables";
 
 .navbar {
-    background-color: $black;
+    background-color: $backgroundGrey;
     color: #fff;
     padding: 25px 75px 0px 25px;
     height: 100%;
