--- a/src/pages/album/index.module.scss
+++ b/src/pages/album/index.module.scss
@@ -24,11 +24,10 @@
     }
 }
 
-
-
 .albums_container {
     display: grid;
 
     grid-template-columns: repeat(auto-fill, 200px);
     gap: 50px;
+    justify-content: center;
 }
