--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -1,8 +1,7 @@
-
-
 //Color
-$primary-color:#1DB954;
-$black:#121212;
-$white:#FFFFFF;
+$primary-color: #1db954;
+$black: #121212;
+$white: #ffffff;
 $background-card: #181818;
+$backgroundGrey: rgb(18, 18, 18);
 $light-gray: #c6c6c6;
